--- a/src/components/subnav-section/subnav-section.scss
+++ b/src/components/subnav-section/subnav-section.scss
@@ -1,4 +1,4 @@
-.subnav__header {
+.subnav-section__title {
     color: $color-grey-ultra-dark;
     font-size: 1.4rem;
     font-weight: 700;
@@ -6,7 +6,7 @@
     padding-left: 2.3rem;
 }
 
-.subnav__list {
+.subnav-section__list {
     margin-top: 1rem;
     margin-bottom: 2rem;
 }
